--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Vicerrectorado Acad&eacute;mico- Universidad de Carabobo</title>
+		<title>Hielo by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,22 +22,13 @@
 			</header>
 
 		<!-- Nav -->
-	<nav id="menu">
-		<ul class="links">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="generic.html">Informaci&oacute;n</a></li>
-			<!-- <li><a href="elements.html">Dependencias</a></li> -->
-			<li onclick="myFunction()" class="dropbtn"><a href="">Dependencias
-				<span class="caret"></span></a>
-					<div id="myDropdown" class="dropdown-content">
-				    <a href="#001">Asuntos Profesorales</a>
-				    <a href="#002">Dirección General de Postgrado</a>
-				    <a href="#003">CDCH</a>
-				    <a href="#004">Auditoría Académica</a>
-				    <a href="#005">Dosencia Curricular</a>
-				  </div>
-				</a>
-			</li>
+			<nav id="menu">
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="generic.html">Generic</a></li>
+					<li><a href="elements.html">Elements</a></li>
+				</ul>
+			</nav>
 
 		<!-- One -->
 			<section id="One" class="wrapper style3">
@@ -51,9 +42,9 @@
 
 		    <br><br><div class="col two-third">
         	<div class="padding_right">
-                <div class="containers">
+                <div class="padding_right">
 
-               
+                 <center>
                   <h5 align="justify"><strong>Direcci&oacute;n:</strong> Av. Bol&iacute;var Norte Sede del Rectorado U.C., Valencia edo. Carabobo</h5>
                   <h5 align="justify"><strong>Correo Electonico:</strong> viceacuc@uc.edu.ve </h5>
                   <h5 align="justify"><strong>Tlf</strong> 0241-8238141 </h5>
@@ -72,7 +63,7 @@
                   <p align="justify"> Vicerrectorado Administrativo - Asistente del Vicerrector Acad&eacute;mico  		104086 </p>
                   <p align="justify">Vicerrectorado Administrativo - Asistente de Gesti&oacute;n Acad&eacute;mica  		104088</p>
                   <p align="justify"> Vicerrectorado Administrativo - Asesor del Vicerrector Acad&eacute;mico  		104089 </p>
-           
+                </center>
                 </div>
                 <h3></h3>
                 <h2>&nbsp;</h2>
