--- a/index.html
+++ b/index.html
@@ -27,22 +27,25 @@
 		<!-- Nav -->
 	<nav id="menu">
 		<ul class="links">
-			<li><a href="index.html">Home</a></li>
+			<li><a href="index.html">INICIO</a></li>
 			<li><a href="generic.html">Informaci&oacute;n</a></li>
+			 <li><a href="index.html">AGENDA ACADÉMICA</a></li>
 			<!-- <li><a href="elements.html">Dependencias</a></li> -->
 			<li onclick="myFunction()" class="dropbtn"><a href="">Dependencias
 				<span class="caret"></span></a>
 					<div id="myDropdown" class="dropdown-content">
-				    <a href="001">Asuntos Profesorales</a>
-				    <a href="002">Dirección General de Postgrado</a>
-				    <a href="003">CDCH</a>
-				    <a href="004">Auditoría Académica</a>
-				    <a href="005">Dosencia Curricular</a>
+				    <a href="#home">CDCH</a>
+				    <a href="#about">AUDITORIA ACADÉMICA</a>
+				    <a href="#contact">DIRECCIÓN GENERAL DE POSTGRADO</a>
+				    <a href="#contact">ASUNTOS PROFESORALES</a>
+				     <a href="#contact">DOCENCIA CURRICULAR</a>
+				      <a href="#contact">BIBLIOTECA CENTRAL</a>
 				  </div>
 				</a>
 			</li>
 
 	    <li><a href="index.html">Galer&iacute;a</a></li>
+	    <li><a href="http://seduc.uc.edu.ve/viceacademico/">Aula Virtuales</a></li>
 	    <li><a href="index.html">Enlaces</a></li>
 		  <li><a href="generic.html">Contacto</a></li>
 		</ul>
@@ -189,7 +192,7 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/vracUC" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
